--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
   </div>
 
   <div class='container actionButtons center-block'>
-    <a href="/views/signUpForm"> <button class="btn btn-raised btn-primary">Sign Up</button> </a>
-    <a href="/views/logInForm"> <button class="btn btn-raised btn-info">Log In!</button></a>
+    <a href="views/signUpForm.html"> <button class="btn btn-raised btn-primary">Sign Up</button> </a>
+    <a href="views/logInForm.html"> <button class="btn btn-raised btn-info">Log In!</button></a>
   </div>
+
 
 
 
@@ -42,13 +43,11 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
-  <script type="text/javascript" src='js/app.js'></script>
+
     <script type="text/javascript" src='js/controllers/defaultPageController.js'></script>
     <script type="text/javascript" src='js/controllers/logInFormCtrl.js'></script>
     <script type="text/javascript" src='js/controllers/signUpFormCtrl.js'></script>
-    
-
-
+  <script type="text/javascript" src='js/app.js'></script>    
 
 
 
