--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </h1>
   </div>
 
-  <div ng-view>
+  <div ng-view class='container center-block'>
   </div>
 
   <div class='container actionButtons center-block'>
