Adds userGraphCtrl and Routing and adds data as an array in order for dataset to work

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script type="text/javascript" src='js/controllers/defaultPageController.js'></script>
     <script type="text/javascript" src='js/controllers/logInFormCtrl.js'></script>
     <script type="text/javascript" src='js/controllers/signUpFormCtrl.js'></script>
+    <script type="text/javascript" src='js/controllers/userGraphCtrl.js'></script>
 
 
 
