Finishes Styling for MVP

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div class='container center-block'>
     <h1>
-      This App is amazing it needed exactly those features to make me sign up.
+    LifeScoreboard allows you to visualize how your day has been in the past
     </h1>
   </div>
 
